Implement file structure and routing

--- a/get-started.html
+++ b/get-started.html
@@ -18,8 +18,8 @@
             <div>
                 <h3 class="float-md-left mb-0">Google Takeout Viz</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-right">
-                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                    <a class="nav-link" href="./get-started.html">Get Started</a>
+                    <a class="nav-link" href="./index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="./get-started.html">Get Started</a>
                     <a class="nav-link" href="./demo.html">Demo</a>
                     <a class="btn btn-outline-success ml-3" href="./app.html">Try it yourself</a>
                 </nav>
@@ -28,11 +28,14 @@
         </header>
 
         <main class="px-3">
-            <h1>Take a good look at your Google Data</h1>
-            <p class="lead">Visualizes your Google Data right in your browser. They never leave your PC!</p>
+            <h1>How to analyze your own Google Takeout data</h1>
+            <p class="lead">Steps</p>
             <p class="lead">
-                <a href="#" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">Get Started</a>
-                <a href="#" class="btn btn-lg btn-secondary font-weight-bold border-white bg-white">Try it yourself</a>
+            <ul>
+                <li>1. Step</li>
+                <li>2. Step</li>
+                <li>3. Step</li>
+            </ul>
             </p>
         </main>
 
